# strategies

./: .gitignore  README.md  conftest.py  pyproject.toml  simple_strategies.py
.github/: CODEOWNERS
tests/: test_simple_strategies.py
