[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strategies"
version = "0.1.0"
description = "Environment-agnostic trading strategy building blocks (buy & hold, monkey, trailing stop + re-entry) for backtesting and live/cloud execution."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Balázs Koncz" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/balazskoncz/strategies"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
py-modules = ["simple_strategies"]
